--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "portifolio",
-  "homepage": "http://guipiveti.github.io",
+  "name": "portfolio",
+  "homepage": "http://gustavocioccari.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
